tests/chapter_16/invalid_types/string_initializer_too_long.c
/* You can't initialize a char array from a string literal
 * that's too LONG64 to fit in it */
int main(void) {
    char too_long[3] = "abcd";
    return 0;
}